--- a/css/main.css
+++ b/css/main.css
@@ -2434,3 +2434,19 @@ ul {
     width: 100%;
   }
 }
+
+.map-responsive {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+}
+
+.map-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  border: 0;
+}
